# auth

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  auth.pc.in  cliff.toml  readme.md  rustfmt.toml  typos.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  typos.toml
.github/workflows/: cd.yml  rust.yml  typos.yml
include/: Auth.hpp
include/auth/: Cli.hpp  Color.hpp  Db.hpp  Import.hpp
include/auth/tests/: MockDb.hpp  TestCli.hpp
man/: auth.1
src/: Cli.cpp  Db.cpp  ImportExport.cpp  Main.cpp  Totp.cpp  app.rs  cli.rs  clipboard.rs  command.rs  constants.rs  crypto.rs  entry.rs  event.rs  layout.rs  lib.rs  main.rs  mouse.rs  notification.rs  root.rs  size.rs  totp.rs  ui.rs  utils.rs
src/auth_core/: app.rs  crypto.rs  entry.rs  totp.rs
src/cli/: Cli.cpp  Cli.hpp
src/core/: Color.cpp  Totp.cpp  Totp.hpp  app.rs  crypto.rs  entry.rs  totp.rs
src/db/: Db.cpp  Db.hpp  SecretStorage.cpp  SecretStorage.hpp
src/helpers/: Color.cpp  ImportExport.cpp  ImportExport.hpp  MiscFunctions.cpp  MiscFunctions.hpp
src/input/: event.rs  linux.rs  mouse.rs  root.rs
src/ui/: core.rs  file_browser.rs  layout.rs  notification.rs  renderer.rs  size.rs
src/utils/: ImportExport.cpp  cli.rs  clipboard.rs  command.rs  constants.rs  error.rs
tests/: CliTests.cpp  DbTests.cpp  Main.cpp  MockDb.cpp  SecretStorageTests.cpp  TestCli.cpp  TotpTests.cpp  entry_test.rs  path_test.rs  totp_test.rs
tests/helpers/: TestCli.cpp  TestCli.hpp
tests/misc/: TestEntries.json  TestEntries.toml
tests/mocks/: MockDb.cpp  MockDb.hpp
