[package]
name = "auth"
version = "0.3.1"
authors = ["xsy420 <xsy0420@gmail.com>", "Nyx <nnyyxxxx@protonmail.com>"]
license = "GPL-2.0"
description = "Authenticator TUI made in rust, generate totps on the fly. "
repository = "https://github.com/xsy420/auth.git"
readme = "README.md"
keywords = [
    "authenticator",
    "tui",
]
edition = "2024"
rust-version = "1.87.0"
[package.metadata.deb]
assets = [
  [
    "target/release/auth",
    "/usr/bin/",
    "755",
  ],
  [
    "LICENSE",
    "/usr/share/doc/auth/LICENSE",
    "644",
  ],
  [
    "README.md",
    "/usr/share/licenses/auth/README.md",
    "644",
  ],
]
[package.metadata.generate-rpm]
assets = [
  { source = "target/release/auth", dest = "/usr/bin/auth", mode = "755" },
  { source = "LICENSE", dest = "/usr/share/licenses/auth/LICENSE", mode = "644" },
  { source = "README.md", dest = "/usr/share/doc/auth/README.md", mode = "644" },
]

[dependencies]
ratatui = "0.29.0"
totp-rs = "5.7.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.23"
dirs = "6.0.0"
base32 = "0.5.1"
age = "0.11.1"
secrecy = "0.10.3"
nix = { version = "0.30.1", features = ["user"] }
clap = { version = "4.5.40", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
serial_test = "3.2.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
strip = true
