[package]
name = "auth"
version = "0.3.5"
authors = ["xsy420 <xsy0420@gmail.com>", "Nyx <nnyyxxxx@protonmail.com>"]
license = "GPL-2.0"
description = "Authenticator TUI made in rust, generate totps on the fly. "
repository = "https://github.com/xsy420/auth.git"
readme = "README.md"
keywords = [
    "authenticator",
    "tui",
]
default-run = "auth"
edition = "2024"
rust-version = "1.88.0"

[[bin]]
name = "auth-completions"
path = "src/bin/completions.rs"

[package.metadata.deb]
assets = [
  [
    "target/release/auth",
    "/usr/bin/",
    "755",
  ],
  [
    "LICENSE",
    "/usr/share/licenses/auth/LICENSE",
    "644",
  ],
  [
    "README.md",
    "/usr/share/doc/auth/README.md",
    "644",
  ],
  [
    "man/auth.1",
    "/usr/share/man/man1/auth.1",
    "644",
  ],
  [
    "completions/auth.bash",
    "/usr/share/bash-completion/completions/auth",
    "644",
  ],
  [
    "completions/auth.fish",
    "/usr/share/fish/vendor_completions.d/auth.fish",
    "644",
  ],
  [
    "completions/_auth",
    "/usr/share/zsh/site-completions/",
    "644",
  ],
]
depends = ["libgcc-s1 (>= 3.0)"]
[package.metadata.generate-rpm]
assets = [
  { source = "target/release/auth", dest = "/usr/bin/auth", mode = "755" },
  { source = "LICENSE", dest = "/usr/share/licenses/auth/LICENSE", mode = "644" },
  { source = "README.md", dest = "/usr/share/doc/auth/README.md", mode = "644" },
  { source = "man/auth.1", dest = "/usr/share/man/man1/auth.1", mode = "644", doc = true },
  { source = "completions/auth.bash", dest = "/usr/share/bash-completion/completions/auth", mode = "644" },
  { source = "completions/auth.fish", dest = "/usr/share/fish/vendor_completions.d/auth.fish", mode = "644" },
  { source = "completions/_auth", dest = "/usr/share/zsh/site-completions/", mode = "644" },
]

[dependencies]
ratatui = "0.29.0"
totp-rs = "5.7.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.23"
dirs = "6.0.0"
base32 = "0.5.1"
age = "0.11.1"
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.54"
thiserror = "2.0.12"
arboard = { version = "3.6.0", default-features = false, features = ["wayland-data-control"] }

[dev-dependencies]
serial_test = "3.2.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["user"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
strip = true
