[package]
name = "auth"
version = "0.3.5"
edition = "2024"
rust-version = "1.90.0"
description = "Authenticator TUI made in rust, generate totps on the fly. "
readme = "README.md"
repository = "https://github.com/xsy420/auth.git"
license = "GPL-2.0"
keywords = [
  "authenticator",
  "tui",
]
default-run = "auth"

[package.metadata.deb]
assets = [
  [
    "target/release/auth",
    "/usr/bin/",
    "755",
  ],
  [
    "LICENSE",
    "/usr/share/licenses/auth/LICENSE",
    "644",
  ],
  [
    "README.md",
    "/usr/share/doc/auth/README.md",
    "644",
  ],
  [
    "man/auth.1",
    "/usr/share/man/man1/auth.1",
    "644",
  ],
  [
    "completions/auth.bash",
    "/usr/share/bash-completion/completions/auth",
    "644",
  ],
  [
    "completions/auth.fish",
    "/usr/share/fish/vendor_completions.d/auth.fish",
    "644",
  ],
  [
    "completions/_auth",
    "/usr/share/zsh/site-completions/",
    "644",
  ],
]
depends = ["libgcc-s1 (>= 3.0)"]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/auth", dest = "/usr/bin/auth", mode = "755" },
  { source = "LICENSE", dest = "/usr/share/licenses/auth/LICENSE", mode = "644" },
  { source = "README.md", dest = "/usr/share/doc/auth/README.md", mode = "644" },
  { source = "man/auth.1", dest = "/usr/share/man/man1/auth.1", mode = "644", doc = true },
  { source = "completions/auth.bash", dest = "/usr/share/bash-completion/completions/auth", mode = "644" },
  { source = "completions/auth.fish", dest = "/usr/share/fish/vendor_completions.d/auth.fish", mode = "644" },
  { source = "completions/_auth", dest = "/usr/share/zsh/site-completions/", mode = "644" },
]

[[bin]]
name = "auth-completions"
path = "src/bin/completions.rs"

[dependencies]
age = "0.11.2"
arboard = { version = "3.6.1", default-features = false, features = [
  "wayland-data-control",
] }
base32 = "0.5.1"
clap = { version = "4.5.58", features = ["derive"] }
clap_complete = "4.5.66"
dirs = "6.0.0"
ratatui = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.0.0"
totp-rs = "5.7.0"

[dev-dependencies]
serial_test = "3.3.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.1", features = ["user"] }

[profile.dev]
strip = true

[profile.release]
opt-level = 3
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1
